# GottaCatchAFew

./: CMakeLists.txt
GottaCatchAFew/: CMakeLists.txt  GottaCatchAFew.cpp  GottaCatchAFew.h
GottaCatchAFew/Data/: Database.h  Importer.cpp  Importer.h
GottaCatchAFew/Data/Mons/: BaseStatsMons.json
GottaCatchAFew/src/: Combat.cpp  Combat.h  Mons.cpp  Mons.h
